--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ var _hmt = _hmt || [];
             <p>
             <p>
             <a href="https://zhifei1993.github.io/" target="_blank">
-                <font size="5" style="color:#000;">李志飞</font>
+                <font size="5" style="color:#000;">舒聪聪</font>
             </a>
             <p>
                 
